<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c1"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/rv1">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/shipped" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img1"
                android:text="@string/op1"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/dop1"
                android:textColor="#455A64"
                android:textSize="16sp"
                android:layout_toRightOf="@id/img1"
                android:layout_toEndOf="@id/img1"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/c2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_marginTop="0dp"
            android:id="@+id/rv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/veg" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img2"
                android:text="@string/op2"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/img2"
                android:layout_toRightOf="@id/img2"
                android:text="@string/dop2"
                android:textColor="#455A64"
                android:textSize="16sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/c3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_marginTop="0dp"
            android:id="@+id/rv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/alarm" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img3"
                android:text="@string/op3"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/img3"
                android:layout_toRightOf="@id/img3"
                android:text="@string/dop3"
                android:textColor="#455A64"
                android:textSize="16sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/c4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_marginTop="0dp"
            android:id="@+id/rv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/hands" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img4"
                android:text="@string/op4"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv4"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/img4"
                android:layout_toRightOf="@id/img4"
                android:text="@string/dop4"
                android:textColor="#455A64"
                android:textSize="16sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/c5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_marginTop="0dp"
            android:id="@+id/rv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/like" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img5"
                android:text="@string/op5"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv5"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/img5"
                android:layout_toRightOf="@id/img5"
                android:text="@string/dop5"
                android:textColor="#455A64"
                android:textSize="16sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/c6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_marginTop="0dp"
            android:id="@+id/rv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/mask" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img6"
                android:text="@string/op6"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv6"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/img6"
                android:layout_toRightOf="@id/img6"
                android:text="@string/dop6"
                android:textColor="#455A64"
                android:textSize="16sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>